--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <header class="mb-4">
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">icruposts</a>
+    <a class="navbar-brand" href="/">Microposts</a>
       <button class="navbar-toggler" type="button" data-toggler="collapse" data-target="#navbarSupportedContent">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -8,7 +8,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-out"></ul>
         <ul class="navbar-nav">
-          <li class="navbar-item"><a href="#" class="nav-link">Signup</a></li>
+          <li class="navbar-item"><%= link_to "Signup", signup_path, class: "nav-link" %></li>
           <li class="navbar-item"><a href="#" class="nav-link">Login</a></li>
         </ul>
       </div>
