--- a/app/views/users/favoritings.html.erb
+++ b/app/views/users/favoritings.html.erb
@@ -5,7 +5,7 @@
         <h3 class="card-title"><%= @user.name %></h3>
       </div>
       <div class="card-body">
-        <img class="rounded img-fluid" src="<%= gravatar_url(@user, { size: 500 }) %>" alt="">
+        <img class="rounded img-fluid" src="<%= gravatar_url(@user, { size: 500 }) %>" alt="" >
       </div>
     </div>
     <%= render "relationships/follow_button", user: @user %>
@@ -17,6 +17,6 @@
       <li class="nav-item"><a href="<%= followers_user_path(@user) %>" class="nav-link <%= "active" if current_page?(followers_user_path(@user)) %>">Followers <span class="badge badge-secondary"><%= @count_followers %></span></a></li>
       <li class="nav-item"><a href="<%= favoritings_user_path(@user) %>" class="nav-link <%= "active" if current_page?(favoritings_user_path(@user)) %>">Favorites <span class="badge badge-secondary"><%= @count_favoritings %></span></a></li>
     </ul>
-    <%= render "users", users: @followers %>
+    <%= render "microposts/microposts", microposts: @favoritings %>
   </div>
 </div>
