--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,7 @@
       <li class="nav-item"><a href="<%= user_path(@user) %>" class="nav-link <%= "active" if current_page?(user_path(@user)) %>">Microposts <span class="badge badge-secondary"><%= @count_microposts %></span></a></li>
       <li class="nav-item"><a href="<%= followings_user_path(@user)%>" class="nav-link">Followings <span class="badge badge-secondary"><%= @count_followings %></span></a></li>
       <li class="nav-item"><a href="<%= followers_user_path(@user) %>" class="nav-link">Followers <span class="badge badge-secondary"><%= @count_followers %></span></a></li>
-      <li class="nav-item"><a href="<%= favoritings_user_path(@user) %>" class="nav-link <%= "active" if current_page?(favoritings_user_path(@user)) %>">Favorites <span class="badge badge-secondary"><%= @count_favoritings %></span></a></li>
+      <li class="nav-item"><a href="<%= likes_user_path(@user) %>" class="nav-link <%= "active" if current_page?(likes_user_path(@user)) %>">Likes <span class="badge badge-secondary"><%= @count_favoritings %></span></a></li>
     </ul>
     <%= render "microposts/microposts", microposts: @microposts %>
   </div>
